First layout of some pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bacchustech",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://a37547.github.io/Bacchustech",
+  "homepage": "http://a37547.github.io/Bacchustech",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
