--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bacchustech",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "http://a37547.github.io/Bacchustech",
+  "private": false,
+  "homepage": "./",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
@@ -10,13 +10,26 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "faker": "^6.6.6",
+    "joi": "^17.6.0",
+    "jose": "^4.9.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
+    "react-chartjs-2": "^4.0.1",
+    "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
+    "react-joi": "^1.1.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.7",
+    "recharts": "^2.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,8 +37,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +59,10 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.1.2",
     "gh-pages": "^3.2.3"
+  },
+  "browser": {
+    "crypto": false
   }
 }
