--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@react-pdf/renderer": "^3.1.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +16,11 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-plugin-labels": "^1.1.0",
     "faker": "^6.6.6",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "joi": "^17.6.0",
     "jose": "^4.9.0",
     "js-cookie": "^3.0.1",
@@ -29,7 +34,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.7",
-    "recharts": "^2.1.9",
+    "recharts": "^2.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
